--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moova | Contact Us</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </head>
+
 <body class="bg-gradient-to-tr from-indigo-600 to-pink-500 min-h-screen flex items-center justify-center font-sans">
-    
+
   <div class="bg-white rounded-2xl shadow-xl w-full max-w-3xl p-8 space-y-6">
     <div class="text-center">
       <h1 class="text-3xl font-bold text-gray-800">Talk to <span class="text-pink-600">Moova</span></h1>
       <p class="text-gray-500 mt-2 text-sm">We're here for your leasing needs — cars, ships, planes and vibes!</p>
     </div>
+
+    <a href="index.html"
+      class="fixed top-4 left-4 bg-indigo-700 hover:bg-indigo-800 text-white px-3 py-1.5 rounded-full shadow-lg text-sm flex items-center z-50 transition ring-2 ring-white">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+      </svg>
+      Back
+    </a>
 
     <form action="#" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Full Name -->
@@ -64,8 +78,19 @@
       <p>📍 Nairobi, Kenya</p>
       <p>📞 +254 700 123 456</p>
       <p>📧 support@moova.co.ke</p>
+      
+      <div class="flex justify-center mt-10">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.847004255085!2d36.8052744!3d-1.2643001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1798b0b87a35%3A0x3d02de82b0454dce!2sNafasi%20Connection%20LLC!5e0!3m2!1sen!2ske!4v1749625413437!5m2!1sen!2ske"
+          width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade" class="rounded-xl shadow-lg">
+        </iframe>
+      </div>
+
+
     </div>
   </div>
 
 </body>
+
 </html>
