--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gradient-to-br from-pink-500 via-purple-600 to-indigo-600 min-h-screen flex items-center justify-center font-sans">
+<body
+  class="bg-gradient-to-br from-pink-500 via-purple-600 to-indigo-600 min-h-screen flex items-center justify-center font-sans">
 
   <div class="bg-white rounded-2xl shadow-xl w-full max-w-md p-8 space-y-6">
     <div class="text-center">
@@ -15,7 +17,19 @@
       <p class="text-gray-500 mt-2 text-sm">Start leasing your vibe today.</p>
     </div>
 
-    <form action="#" method="POST" class="space-y-5">
+    <a href="index.html"
+      class="fixed top-4 left-4 bg-indigo-700 hover:bg-indigo-800 text-white px-3 py-1.5 rounded-full shadow-lg text-sm flex items-center z-50 transition ring-2 ring-white">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+      </svg>
+      Back
+    </a>
+
+
+
+
+    <form id="register-form" class="space-y-5">
 
       <!-- Full Name -->
       <div>
@@ -53,9 +67,41 @@
     </form>
 
     <p class="text-center text-sm text-gray-600">Already have an account?
-      <a href="#" class="text-indigo-600 font-semibold hover:underline">Log In</a>
+      <a href="login.html" class="text-indigo-600 font-semibold hover:underline">Log In</a>
+    </p>
+    <p id="registration-success" class="text-green-600 font-semibold text-center mt-4 hidden">
+      ✅ Registration successful! Redirecting...
+    </p>
+    <p id="registration-error" class="text-red-600 font-semibold text-center mt-4 hidden">
+      ❌ Invalid email or password. Try again.
     </p>
   </div>
 
+  <script>
+    const registerForm = document.getElementById('register-form');
+    const registrationsuccess = document.getElementById('registration-success');
+    const registrationError = document.getElementById('registration-error');
+
+    registerForm.addEventListener('submit', function (e) {
+      e.preventDefault(); // Prevent form from refreshing the page
+
+      // Simulate saving user data (optional: collect form values)
+      const name = registerForm.querySelector('input[name="name"]')?.value || '';
+      const email = registerForm.querySelector('input[name="email"]')?.value || '';
+      const password = registerForm.querySelector('input[name="password"]')?.value || '';
+
+      // Save to localStorage (simulation only)
+      const userData = { name, email, password };
+      localStorage.setItem('moovaUser', JSON.stringify(userData));
+
+      // Redirect to listings page after 1 second (simulate processing)
+      setTimeout(() => {
+        window.location.href = "lisitings.html";
+      }, 3500);
+    });
+  </script>
+
+
 </body>
+
 </html>
