--- a/lisitings.html
+++ b/lisitings.html
@@ -48,12 +48,19 @@
         <p class="text-lg">Lease a car, ship, or aircraft — the Moova way.</p>
     </section>
 
+     <!-- Search bar -->
+    <div class="max-w-4xl mx-auto my-6 px-4">
+        <input type="text" id="searchInput" placeholder="Search for vehicles..."
+            class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-pink-500" />
+    </div>
+
+
     <!-- Listings Grid -->
     <section class="py-16 px-6">
         <div class="max-w-7xl mx-auto grid md:grid-cols-3 sm:grid-cols-2 gap-8">
 
             <!-- Card 1 - Car -->
-            <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
+            <div id="1" class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
                 <img src="Assets\Range rover.webp" alt="Car" class="w-full h-48 object-cover rounded-xl mb-4">
                 <span class="text-xs bg-pink-100 text-pink-600 px-2 py-1 rounded-full uppercase">Car</span>
                 <h3 class="text-lg font-semibold mt-2">Range Rover Evoque</h3>
@@ -66,7 +73,7 @@
             </div>
 
             <!-- Card 2 - Plane -->
-            <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
+            <div id="2" class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
                 <img src="Assets\citation-x-plus-charter.webp" alt="Plane"
                     class="w-full h-48 object-cover rounded-xl mb-4">
                 <span class="text-xs bg-indigo-100 text-indigo-600 px-2 py-1 rounded-full uppercase">Aircraft</span>
@@ -80,7 +87,7 @@
             </div>
 
             <!-- Card 3 - Ship -->
-            <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
+            <div id="3" class="bg-white rounded-2xl shadow-md hover:shadow-xl transition p-4">
                 <img src="Assets\Navetta-68-Main yacht.jpg" alt="Ship" class="w-full h-48 object-cover rounded-xl mb-4">
                 <span class="text-xs bg-blue-100 text-blue-600 px-2 py-1 rounded-full uppercase">Ship</span>
                 <h3 class="text-lg font-semibold mt-2">Luxury Yacht 65ft</h3>
@@ -109,6 +116,33 @@
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+
+
+  let listingData = [];
+
+// Load JSON data once when page loads
+fetch('moova.json')
+  .then(res => res.json())
+  .then(data => {
+    listingData = data;
+  });
+
+document.getElementById('searchInput').addEventListener('input', function () {
+  const query = this.value.toLowerCase();
+
+  // Loop through all listing cards
+  listingData.forEach(listing => {
+    const matchText = `${listing.name} ${listing.type}`.toLowerCase();
+    const card = document.getElementById(listing.id);
+
+    if (matchText.includes(query)) {
+      card.style.display = "block"; // or use 'flex' if flex-based
+    } else {
+      card.style.display = "none";
+    }
+  });
+});
+
     </script>
 
 </body>
