--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       Back
     </a>
 
-    <form action="#" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <form action="https://formspree.io/f/xkgzgzvj" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Full Name -->
       <div class="col-span-2 md:col-span-1">
         <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
@@ -72,6 +72,12 @@
         </button>
       </div>
     </form>
+    
+    <!--Confirmation message-->
+    <div id="success-message" class="hidden mt-6 p-4 bg-green-100 border border-green-300 text-green-800 rounded-lg">
+      Thank you! Your message has been sent successfully.
+    </div>
+
 
     <!-- Contact Info Footer -->
     <div class="text-center text-sm text-gray-600 pt-4">
@@ -90,6 +96,42 @@
 
     </div>
   </div>
+  <!--confirmations message JS logic-->
+  <script>
+  const form = document.querySelector("form");
+  const successMessage = document.getElementById("success-message");
+
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+    const action = form.getAttribute("action");
+
+    try {
+      const response = await fetch(action, {
+        method: "POST",
+        body: formData,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (response.ok) {
+        form.reset();
+        successMessage.classList.remove("hidden");
+
+        // Redirect to thanks.html after 1.5 seconds
+        setTimeout(() => {
+          window.location.href = "thanks.html";
+        }, 1500);
+      } else {
+        alert("Oops! Something went wrong.");
+      }
+    } catch (error) {
+      alert("Error sending message. Please try again.");
+    }
+  });
+</script>
+
+
 
 </body>
 
