--- a/bookings.html
+++ b/bookings.html
@@ -38,13 +38,13 @@
 
     <form id="booking-form" class="space-y-4">
       <div>
-        <label class="block mb-1 font-medium">Item Name</label>
-        <input type="text" id="item-name" value="Range" class="w-full px-4 py-2 border rounded-lg bg-gray-100" />
+        <label class="block mb-1 font-medium">Vehicle Name</label>
+        <input type="text" id="vehicle-name" class="w-full px-4 py-2 border rounded-lg bg-gray-100" />
       </div>
 
       <div>
         <label class="block mb-1 font-medium">Daily Rate</label>
-        <input type="number" id="daily-rate" value="" class="w-full px-4 py-2 border rounded-lg bg-gray-100" />
+        <input type="number" id="daily-rate" class="w-full px-4 py-2 border rounded-lg bg-gray-100" />
       </div>
 
       <div>
@@ -71,14 +71,14 @@
   </section>
 
   <script>
-    // Extract query parameters from URL
-    const params = new URLSearchParams(window.location.search);
-    const itemName = params.get('name');
-    const dailyRate = params.get('rate');
 
-    // Populate input fields
-    document.getElementById('item-name').value = itemName || '';
-    document.getElementById('daily-rate').value = dailyRate || '';
+  document.addEventListener('DOMContentLoaded', () => {
+    const storedData = JSON.parse(localStorage.getItem('selectedVehicle'));
+
+    if (storedData) {
+      document.getElementById('vehicle-name').value = storedData.name;
+      document.getElementById('daily-rate').value = parseInt(storedData.rate.replace(/\D/g, '')); // removes "Ksh"
+    }
 
     const form = document.getElementById('booking-form');
     const dailyRateInput = document.getElementById('daily-rate');
@@ -97,29 +97,32 @@
     function updateTotalPrice() {
       const start = startDateInput.value;
       const end = endDateInput.value;
-      const dailyRate = parseInt(dailyRateInput.value);
+      const rate = parseInt(dailyRateInput.value);
 
-      if (start && end && !isNaN(dailyRate)) {
+      if (start && end && !isNaN(rate)) {
         const days = calculateDays(start, end);
         if (days > 0) {
-          totalPrice.value = `Ksh ${days * dailyRate}`;
+          totalPrice.value = `Ksh ${days * rate}`;
         } else {
           totalPrice.value = 'Invalid range';
         }
       }
     }
 
-    //  Trigger total update when inputs change
     startDateInput.addEventListener('input', updateTotalPrice);
     endDateInput.addEventListener('input', updateTotalPrice);
     dailyRateInput.addEventListener('input', updateTotalPrice);
 
-    //  Show confirmation on submit
     form.addEventListener('submit', function (e) {
       e.preventDefault();
       confirmationMsg.classList.remove('hidden');
       confirmationMsg.textContent = '✅ Booking saved successfully!';
     });
+  });
+</script>
+
+  
+    
   </script>
 </body>
 
